--- a/final/frontend/admin/list-items.html
+++ b/final/frontend/admin/list-items.html
@@ -143,12 +143,12 @@
                   type="url"
                   class="form-control"
                   id="edit-image"
-                  required
+                  
                 />
               </div>
               <div class="mb-3">
                 <label for="edit-category" class="form-label">Category</label>
-                <select class="form-select" id="edit-category" required>
+                <select class="form-select" id="edit-category" >
                   <option value="women">Women's Clothing</option>
                   <option value="men">Men's Clothing</option>
                   <option value="kids">Kids' Clothing</option>
@@ -171,6 +171,8 @@
         </div>
       </div>
     </div>
+
+    
 
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="./assets/js/list-items.js" defer></script>
