--- a/final/frontend/pages/index.html
+++ b/final/frontend/pages/index.html
@@ -14,6 +14,7 @@
 
     <!-- Main Content -->
     <main>
+      <img src="../../Backend${product.image}">
       <div class="container mt-5">
         <h1>Welcome to Our Store!</h1>
         <p>Browse our products and find the best deals.</p>
