--- a/final/frontend/pages/orders.html
+++ b/final/frontend/pages/orders.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Orders</title>
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Order Management</title>
+  <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <link rel="stylesheet" href="../assets/icons/bootstrap-icons.css" />
-  </head>
-  <body>
-    <!-- Include Header -->
-    <div id="header-placeholder"></div>
+</head>
+<body>
+  <div id="header-placeholder"></div>
+  <div class="container">
+    <h1 class="my-4 text-center">Order Management</h1>
 
-    <!-- Orders -->
-    <main>
-      <div class="container mt-5">
-        <h1 class="text-center mb-4">Your Orders</h1>
-        <div id="orders-container"></div>
-        <div class="text-center mt-4">
-          <a href="./index.html" class="btn btn-primary">Back to Products</a>
-        </div>
-      </div>
-    </main>
+    <div id="orders-container">
+      <!-- Orders will be dynamically populated here -->
+    </div>
+  </div>
+  <div id="footer-placeholder"></div>
 
-    <!-- Include Footer -->
-    <div id="footer-placeholder"></div>
-
-    <script src="../assets/js/orders.js" defer></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="../assets/js/orders.js"></script>
+</body>
 </html>
