--- a/final/frontend/admin/add-items.html
+++ b/final/frontend/admin/add-items.html
@@ -6,6 +6,7 @@
     <title>Add Items</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/admin-styles.css" />
+    <link rel="icon" type="image/png" href="../assets/images/icon.jpg" />
   </head>
   <body>
     <!-- Navigation (reuse from index.html) -->
@@ -69,7 +70,13 @@
         </div>
         <div class="mb-3">
           <label for="image" class="form-label">Upload Image</label>
-          <input type="file" class="form-control" id="image" accept="image/*" required />
+          <input
+            type="file"
+            class="form-control"
+            id="image"
+            accept="image/*"
+            required
+          />
         </div>
         <div class="mb-3">
           <label for="category" class="form-label">Category</label>
