--- a/final/frontend/admin/index.html
+++ b/final/frontend/admin/index.html
@@ -6,6 +6,7 @@
     <title>Admin Panel</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/admin-styles.css" />
+    <link rel="icon" type="image/png" href="../assets/images/icon.jpg" />
   </head>
   <body>
     <!-- Navigation -->
