--- a/final/frontend/admin/list-items.html
+++ b/final/frontend/admin/list-items.html
@@ -6,6 +6,8 @@
     <title>Admin - List Products</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/admin-styles.css" />
+    <link rel="icon" type="image/png" href="../assets/images/icon.jpg" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
@@ -139,16 +141,11 @@
               </div>
               <div class="mb-3">
                 <label for="edit-image" class="form-label">Image URL</label>
-                <input
-                  type="url"
-                  class="form-control"
-                  id="edit-image"
-                  
-                />
+                <input type="url" class="form-control" id="edit-image" />
               </div>
               <div class="mb-3">
                 <label for="edit-category" class="form-label">Category</label>
-                <select class="form-select" id="edit-category" >
+                <select class="form-select" id="edit-category">
                   <option value="women">Women's Clothing</option>
                   <option value="men">Men's Clothing</option>
                   <option value="kids">Kids' Clothing</option>
@@ -171,8 +168,6 @@
         </div>
       </div>
     </div>
-
-    
 
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="./assets/js/list-items.js" defer></script>
