--- a/final/frontend/pages/orders.html
+++ b/final/frontend/pages/orders.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Order Management</title>
-  <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Order Management</title>
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <link rel="stylesheet" href="../assets/icons/bootstrap-icons.css" />
-</head>
-<body>
-  <div id="header-placeholder"></div>
-  <div class="container">
-    <h1 class="my-4 text-center">Order Management</h1>
+    <link rel="icon" type="image/png" href="../assets/images/icon.jpg" />
+  </head>
+  <body>
+    <div id="header-placeholder"></div>
+    <div class="container">
+      <h1 class="my-4 text-center">Order Management</h1>
 
-    <div id="orders-container">
-      <!-- Orders will be dynamically populated here -->
+      <div id="orders-container">
+        <!-- Orders will be dynamically populated here -->
+      </div>
     </div>
-  </div>
-  <div id="footer-placeholder"></div>
+    <div id="footer-placeholder"></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="../assets/js/orders.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../assets/js/orders.js"></script>
+  </body>
 </html>
