--- a/final/frontend/admin/orders.html
+++ b/final/frontend/admin/orders.html
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin - Manage Orders</title>
-  <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="./assets/css/admin-styles.css" />
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
-  />
-</head>
-<body>
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Admin Panel</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="add-items.html">Add Items</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="list-items.html">List Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="orders.html">Orders</a>
-          </li>
-        </ul>
-      </div>
-      <button class="btn btn-danger btn-sm" id="logout-btn">Logout</button>
-    </div>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin - Manage Orders</title>
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/css/admin-styles.css" />
+    <link rel="icon" type="image/png" href="../assets/images/icon.jpg" />
 
-  <!-- Orders Section -->
-  <div class="container mt-5">
-    <h2 class="mb-4">Manage Orders</h2>
-    <div id="orders-container" class="row g-4">
-      <!-- Orders will be dynamically loaded here -->
-    </div>
-    <div id="loading-spinner" class="text-center" style="display: none;">
-      <div class="spinner-border text-primary" role="status">
-        <span class="visually-hidden">Loading...</span>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+    />
+  </head>
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Admin Panel</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="add-items.html">Add Items</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="list-items.html">List Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="orders.html">Orders</a>
+            </li>
+          </ul>
+        </div>
+        <button class="btn btn-danger btn-sm" id="logout-btn">Logout</button>
+      </div>
+    </nav>
+
+    <!-- Orders Section -->
+    <div class="container mt-5">
+      <h2 class="mb-4">Manage Orders</h2>
+      <div id="orders-container" class="row g-4">
+        <!-- Orders will be dynamically loaded here -->
+      </div>
+      <div id="loading-spinner" class="text-center" style="display: none">
+        <div class="spinner-border text-primary" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script src="./assets/js/orders.js" defer></script>
-</body>
+    <script src="./assets/js/orders.js" defer></script>
+  </body>
 </html>
