--- a/final/frontend/pages/contact.html
+++ b/final/frontend/pages/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <link rel="stylesheet" href="../assets/icons/bootstrap-icons.css" />
+    <link rel="icon" type="image/png" href="../assets/images/icon.jpg" />
 
     <style></style>
   </head>
