--- a/final/frontend/admin/orders.html
+++ b/final/frontend/admin/orders.html
@@ -59,6 +59,7 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./assets/js/orders.js" defer></script>
   </body>
 </html>
